# gib-tuners-mk2

./: .gitignore  7.5mm-cyl.json  75mm-globoid.json  7mm-globoid.json  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  onshape.json  pyproject.toml  spec.md
.github/workflows/: ci.yml
config/: assembly.json  worm_gear.json
config/balanced/: geometry_analysis_m0.6.json
config/bh/: geometry_analysis_m0.6.json  worm_gear.json  worm_m0.6_z1.step
config/bh11/: geometry_analysis_m0.6.json  worm_m0.6_z1.step
config/bh11-cd/: geometry_analysis_m0.6.json  worm_gear.json  worm_m0.6_z1.step
config/bh11-cd-fx/: geometry_analysis_m0.6.json  worm_gear.json  worm_m0.6_z1.step
docs/: component-details.md  manufacturing-proposal.md  nme-healing.md
reference/: WORMGEAR_INTEGRATION_PROMPT.md  mesh_alignment_m0.5.json  mesh_alignment_module.py  peg.dxf  peghead-and-shaft.step  pegsmall.dxf  rhframe.step  wheel_m0.5_z13.step  worm.step  worm_m0.5_z1.step
scripts/: __init__.py  animate.py  build.py  build_all.py  build_frame.py  cutting_jig.py  cutting_jig_spec.md  debug_assembly.py  debug_peg_assembly.py  drawings.py  drilling_jig.py  drilling_jig_spec.md  freecad_drawing.py  generate_print_plate.py  md_to_pdf.sh  meshall.sh  regenerate_gears.py  visualize.py  visualize_full_assembly.py  visualize_peg_head.py  visualize_post.py  visualize_post_wheel.py  visualize_single_housing.py  viz.py
tests/: __init__.py  conftest.py  test_assembly.py  test_assembly_validation.py  test_frame.py  test_generate_print_plate.py  test_parameters.py  test_validation.py
(+62 files in other folders)
