[project]
name = "gib-tuners"
version = "0.1.0"
description = "Parametric CAD for historic guitar tuner restoration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.10.0",
    "ocp-vscode>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gib-build = "scripts.build_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gib_tuners"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
